# boost-asio

./: CMakeLists.txt
include/boost/asio/: deferred.hpp  detached.hpp  placeholders.hpp  this_coro.hpp  use_awaitable.hpp  use_future.hpp  uses_executor.hpp
include/boost/asio/execution/: allocator.hpp  blocking.hpp  blocking_adaptation.hpp  context.hpp  mapping.hpp  occupancy.hpp  outstanding_work.hpp  relationship.hpp
module/: CMakeLists.txt  buffers.cpp  core.cpp  execution.cpp  local.cpp  module.cpp  networking.cpp  pipe.cpp  posix.cpp  properties.cpp  serial_port.cpp  signal_set.cpp  spawn.cpp  timers.cpp  windows.cpp
